# wechat-rss-auto-sender

./: .env.example  .gitignore  CLAUDE.md  FEATURES.md  Makefile  README.md  README_new.md  clean_cache.py  clear_cache.ps1  debug_article_status.py  debug_send_queue.py  dev.ps1  env.example  install-service.sh  optimization_report.py  pyproject.toml  requirements-dev.txt  requirements-linux.txt  requirements-windows.txt  requirements.txt  run.py  start.sh  test_cache_queue.py  test_content_formatting.py  test_content_formatting_new.py  test_default_cover_config.py  test_enhanced_prompt.py  test_optimized_prompt.py  test_quality_control.py  test_real_scenario.py  test_real_send_status.py  test_send_queue.py  test_status_system.py  test_wechat_html_styling.py  test_wechat_proxy.py  upload_default_cover.py
backup_old_tests/: ai_summary_test.py  debug_draft_test.py  minimal_draft_test.py  real_rss_test.py  simple_draft_test.py  test_author_lengths.py  test_colon_variants.py  test_exact_title.py  test_title_variations.py  test_utf8_encoding.py  test_wechat_official.py  test_wechat_official_local.py  test_wechat_official_new.py  test_wechat_official_real.py
scripts/: send_manager_test.py  test_enhanced_ai_features.py  test_quality_filter.py  test_single_article_summary.py  test_time_control.py
src/: __init__.py  config.py  main.py  prompts.py  rss_fetcher.py  scheduler.py  send_manager.py  summarizer.py  utils.py  wechat_sender.py
src/core/: __init__.py  config.py  prompts.py  utils.py
src/integrations/: __init__.py  base_sender.py  send_service_manager.py  wechat_client.py  wechat_official_sender.py  xiaohongshu_sender.py
src/models/: __init__.py
src/services/: __init__.py  ai_service.py  image_service.py  multi_rss_manager.py  rss_service.py  scheduler_service.py  send_service.py
tests/: __init__.py  cleanup_tests.py  conftest.py  memory.py  migrate_tests.py  run_tests.py  test_ai_summary_integration.py  test_ai_summary_migrated.py  test_author_lengths_migrated.py  test_colon_variants_migrated.py  test_complete_sender_architecture.py  test_config.py  test_debug_draft_migrated.py  test_exact_title_migrated.py  test_integration.py  test_memory.json  test_minimal_draft_migrated.py  test_proxy_rss.py  test_real_rss_migrated.py  test_rss_fetcher.py  test_rss_image_download.py  test_scheduler_service.py  test_send_service.py  test_sender_architecture.py  test_simple_draft_migrated.py  test_summarizer.py  test_title_variations_migrated.py  test_translation.py  test_utf8_encoding_migrated.py  test_utils.py  test_wechat_official_advanced.py  test_wechat_official_html.py  test_wechat_official_integration.py  test_wechat_official_local_migrated.py  test_wechat_official_migrated.py  test_wechat_official_new_migrated.py  test_wechat_official_real_migrated.py  test_wechat_official_sender.py  test_wechat_sender.py
tools/: README.md  upload_cover.py  upload_default_cover.py
